[package]
name = "qrcdownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
quick-xml = "0.37.4"
rand = "0.9.1"
flate2 = "1.1.1"
thiserror = "2.0.12"
once_cell = "1.8.0"
regex = "1.5.4"